--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,6 +2,16 @@
     "version": "2.0.0",
     "tasks": [
         {
+            "label": "Build for current",
+            "type": "shell",
+            "command": "go build -o ${workspaceFolder}/bin/current/motor-controller",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "problemMatcher": []
+        },
+        {
             "label": "Build for ARM64",
             "type": "shell",
             "command": "GOOS=linux GOARCH=arm64 go build -o ${workspaceFolder}/bin/arm64/motor-controller-arm64",
