--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,11 +14,7 @@
         {
             "label": "Build for ARM64",
             "type": "shell",
-            "command": "GOOS=linux GOARCH=arm64 go build -o ${workspaceFolder}/bin/arm64/motor-controller-arm64",
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
+            "command": "$env:GOOS='linux'; $env:GOARCH='arm64'; go build -o ${workspaceFolder}/bin/arm64/motor-controller-arm64",
             "problemMatcher": []
         }
     ]
