updated tasks json

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,9 +12,19 @@
             "problemMatcher": []
         },
         {
-            "label": "Build for ARM64",
+            "label": "Build for ARM64 on windows",
             "type": "shell",
             "command": "$env:GOOS='linux'; $env:GOARCH='arm64'; go build -o ${workspaceFolder}/bin/arm64/motor-controller-arm64",
+            "problemMatcher": []
+        },
+        {
+            "label": "Build for ARM64 on linux",
+            "type": "shell",
+            "command": "GOOS=linux GOARCH=arm64 go build -o ${workspaceFolder}/bin/arm64/motor-controller-arm64",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
             "problemMatcher": []
         }
     ]
